# markerml

./: Cargo.toml  README.md  test.html  test.txt
crates/markerml/: Cargo.toml  README.md
crates/markerml/src/: lib.rs
crates/markerml_backend/: Cargo.toml  README.md
crates/markerml_backend/src/: error.rs  html_generator.rs  lib.rs
crates/markerml_cli/: Cargo.toml  Makefile  README.md
crates/markerml_cli/src/: args.rs  common.rs  main.rs  web_server.rs
crates/markerml_cli/web/: index.html  script.js  style.css
crates/markerml_frontend/: Cargo.toml  Makefile  README.md
crates/markerml_frontend/src/: ast.rs  ast_span_helpers.rs  grammar.pest  lib.rs  parse_error.rs  parser.rs  span.rs
crates/markerml_frontend/src/ast/: mod.rs  span_helpers.rs
crates/markerml_frontend/src/common/: span.rs
crates/markerml_frontend/src/lexer/: mod.rs
crates/markerml_frontend/src/parser/: mod.rs  parser_error.rs
crates/markerml_frontend/src/token/: mod.rs  token_human_display.rs
crates/markerml_frontend/src/validator/: mod.rs  validator_error.rs
crates/markerml_frontend/tests/: tests.rs
crates/markerml_middleend/: Cargo.toml  README.md
crates/markerml_middleend/src/: error.rs  ir.rs  ir_generator.rs  lib.rs
