[package]
name = "markerml"
version = "0.1.1"
edition = "2021"
authors = ["Ruslan Omelchuk"]
description = "Simple markup and templating language, that is transpiled to HTML."
license = "MIT"
categories = ["parser-implementations", "web-programming", "template-engine", "compilers"]
repository = "https://github.com/rchuk/markerml"
documentation = "https://docs.rs/markerml/latest/markerml/"

[dependencies]
markerml_frontend = { path = "../markerml_frontend", version = "0.1.3" }
markerml_middleend = { path = "../markerml_middleend", version = "0.1.1" }
markerml_backend = { path = "../markerml_backend", version = "0.1.1" }
thiserror = "2.0.3"
miette = { version = "7.2.0", features = ["derive"] }
