[package]
name = "markerml_frontend"
version = "0.1.0"
edition = "2021"
authors = ["Ruslan Omelchuk"]
description = "Frontend of simple markup and templating language, that is transpiled to HTML."
license = "MIT"
categories = ["parser-implementations", "web-programming", "template-engine", "compilers"]

[dependencies]
pest = { version = "2.7.14", features = ["miette-error"] }
pest_derive = "2.7.14"
thiserror = "2.0.0"
miette = "7.2.0"

[dev-dependencies]
anyhow = "1.0.93"
