[package]
name = "markerml_frontend"
version = "0.1.4"
edition = "2021"
authors = ["Ruslan Omelchuk"]
description = "Frontend of simple markup and templating language, that is transpiled to HTML."
license = "MIT"
categories = ["parser-implementations", "web-programming", "template-engine", "compilers"]
repository = "https://github.com/rchuk/markerml"
documentation = "https://docs.rs/markerml_frontend/latest/markerml_frontend/"

[dependencies]
pest = { version = "2.7.14", features = ["miette-error"] }
pest_derive = "2.7.14"
thiserror = "2.0.0"
miette = "7.2.0"

[dev-dependencies]
anyhow = "1.0.93"
