[package]
name = "markerml_middleend"
version = "0.1.0"
edition = "2021"
authors = ["Ruslan Omelchuk"]
description = "Middleend of simple markup and templating language, that is transpiled to HTML."
license = "MIT"
categories = ["parser-implementations", "web-programming", "template-engine", "compilers"]

[dependencies]
markerml_frontend = { path = "../markerml_frontend", version = "0.1.0" }
thiserror = "2.0.3"
miette = "7.2.0"
itertools = "0.13.0"
